setValueCurveAtTime has implicit setValueAtTime at end

So that the value curve is always run even if there's a linearRamp or
exponentialRamp afterwards, call setValueAtTime to establish an event
at the end of the curve which will be used as the starting event for
any future event.  In this way, the value curve is always run.

This also exposed a bug in the implementation of SetValueCurveAtTime where
the current time would sometimes get reset to 0 instead of monotonically increasing.

WebAudio spec issue: https://github.com/WebAudio/web-audio-api/issues/821
Resolved by https://github.com/WebAudio/web-audio-api/pull/832

BUG=613590
TEST=audioparam-setValueCurve-end.html

Review-Url: https://codereview.chromium.org/2028773002
Cr-Commit-Position: refs/heads/master@{#399788}

Former-commit-id: de853bc3e87d40c16d82ddedc2688b95d50be435